--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -18,14 +18,14 @@ jobs:
         with:
           credentials_json: ${{ secrets.GCP_SA_KEY }}
 
-      - name: Configurar Docker para GCP
-        run: gcloud auth configure-docker
+      - name: Configurar Docker para Google Artifact Registry
+        run: gcloud auth configure-docker us-docker.pkg.dev
 
-      - name: Construir y subir imagen Docker
+      - name: Construir y subir imagen Docker a Artifact Registry
         run: |
-          docker build -t us-docker.pkg.dev/${{ secrets.GCP_PROJECT_ID }}/my-docker-repo/ci-cd-ia:latest .
-          docker push us-docker.pkg.dev/${{ secrets.GCP_PROJECT_ID }}/my-docker-repo/ci-cd-ia:latest
+          docker build -t us-docker.pkg.dev/laboratorioia-449403/my-docker-repo/ci-cd-ia:latest .
+          docker push us-docker.pkg.dev/laboratorioia-449403/my-docker-repo/ci-cd-ia:latest
 
       - name: Desplegar en Cloud Run
         run: |
-          gcloud run deploy ci-cd-ia             --image gcr.io/${{ secrets.GCP_PROJECT_ID }}/ci-cd-ia:latest             --platform managed             --region us-central1             --allow-unauthenticated
+          gcloud run deploy ci-cd-ia --image gcr.io/${{ secrets.GCP_PROJECT_ID }}/ci-cd-ia:latest --platform managed --region us-central1 --allow-unauthenticated
